--- a/app/src/main/res/layout/item_vertical_card.xml
+++ b/app/src/main/res/layout/item_vertical_card.xml
@@ -48,9 +48,9 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="14dp"
-                android:layout_height="14dp"
-                android:src="@drawable/ic_star_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_star_filled_24dp"
                 app:tint="@color/yellow" />
 
             <TextView
