--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,24 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/navigation_home">
-    <fragment
+    app:startDestination="@id/navigation_home">    <fragment
         android:id="@+id/navigation_home"
         android:name="com.saefulrdevs.mubeego.ui.main.home.HomeFragment"
-        android:label="Sign In"
-        tools:layout="@layout/fragment_sign_in" />
+        android:label="Home"
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_navigation_home_to_seeMoreFragment"
+            app:destination="@id/seeMoreFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>      <fragment
+        android:id="@+id/seeMoreFragment"
+        android:name="com.saefulrdevs.mubeego.ui.seemore.SeeMoreFragment"
+        android:label="See More"
+        tools:layout="@layout/fragment_see_more">
+        <argument
+            android:name="extra_type"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_seeMoreFragment_to_navigation_home"
+            app:destination="@id/navigation_home"
+            app:popUpTo="@id/navigation_home"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_playlist"
         android:name="com.saefulrdevs.mubeego.ui.main.playlist.PlaylistFragment"
         android:label="Sign In"
-        tools:layout="@layout/fragment_sign_in" />
+        tools:layout="@layout/fragment_playlist" />
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.saefulrdevs.mubeego.ui.main.profile.ProfileFragment"
         android:label="Sign Up"
-        tools:layout="@layout/fragment_sign_up">
+        tools:layout="@layout/fragment_profile">
         <action
             android:id="@+id/action_profileFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
