--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,10 +16,11 @@
     <!-- Padding -->
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
-    <dimen name="padding_large">24dp</dimen>
-
-    <!-- Text Sizes -->
+    <dimen name="padding_large">24dp</dimen>    <!-- Text Sizes -->
     <dimen name="text_size_small">12sp</dimen>
     <dimen name="text_size_medium">16sp</dimen>
     <dimen name="text_size_large">20sp</dimen>
+    
+    <!-- Toolbar -->
+    <dimen name="action_bar_size">56dp</dimen>
 </resources>
