--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -249,17 +249,20 @@
                 app:layout_constraintBottom_toBottomOf="@id/icSettings" />
 
             <!-- Divider after Theme -->
+
+            <!-- Log out Row -->
+
             <View
                 android:id="@+id/dividerTheme"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
+                android:layout_marginTop="24dp"
                 android:background="#F0F0F0"
-                app:layout_constraintTop_toBottomOf="@id/icSettings"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="12dp" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/icSettings" />
 
-            <!-- Log out Row -->
             <ImageView
                 android:id="@+id/icLogout"
                 android:layout_width="28dp"
