--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,4 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- <style name="Base.Theme.MubeeGo" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/indigo_500</item>
-        <item name="colorPrimaryVariant">@color/indigo_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
-        <item name="android:windowTranslucentStatus">true</item>
-    </style> -->
 
     <style name="Base.Theme.MubeeGo" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/md_theme_primary</item>
@@ -57,10 +47,12 @@
         <item name="colorSurfaceContainer">@color/md_theme_surfaceContainer</item>
         <item name="colorSurfaceContainerHigh">@color/md_theme_surfaceContainerHigh</item>
         <item name="colorSurfaceContainerHighest">@color/md_theme_surfaceContainerHighest</item>
-    </style>
 
-    <style name="SplashTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash_brand_logo</item>
+        <item name="windowSplashScreenBackground">@color/md_theme_background</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/mubeego_logo</item>
+        <item name="windowSplashScreenIconBackgroundColor">@color/md_theme_primaryContainer</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="postSplashScreenTheme">@style/Theme.MubeeGo</item>
     </style>
 
     <style name="Theme.MubeeGo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -68,7 +60,8 @@
     <style name="Theme.MubeeGo.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="Theme.MubeeGo" parent="Base.Theme.MubeeGo" />
-    <style name="Theme.MubeeGo.NoTranslucentStatus" >
+
+    <style name="Theme.MubeeGo.NoTranslucentStatus">
         <item name="android:windowTranslucentStatus">false</item>
     </style>
 
