--- a/app/src/main/res/drawable/ic_playlist_24dp.xml
+++ b/app/src/main/res/drawable/ic_playlist_24dp.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="960">
   <path
       android:pathData="M120,640v-80h320v80L120,640ZM120,480v-80h480v80L120,480ZM120,320v-80h480v80L120,320ZM640,840v-320l240,160 -240,160Z"
-      android:fillColor="#e3e3e3"/>
+      android:fillColor="?attr/colorControlNormal"/>
 </vector>
