--- a/app/src/main/res/layout/activity_main_navigation.xml
+++ b/app/src/main/res/layout/activity_main_navigation.xml
@@ -27,6 +27,7 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/bottom_navigation" />
+        app:menu="@menu/bottom_navigation"
+        app:labelVisibilityMode="labeled" />
 
 </LinearLayout>
